@@ -28,4 +28,18 @@ public class SystemCall {
 }
      ]]></code>
     </test-code>
+    <test-code>
+        <description><![CDATA[
+basic violations with Runtime
+     ]]></description>
+        <expected-problems>1</expected-problems>
+        <code><![CDATA[
+public class Bar {
+    public void foo() {
+        // NEVER DO THIS IN A APP SERVER !!!
+        Runtime.getRuntime().exit(0);
+    }
+}
+     ]]></code>
+    </test-code>
 </test-data>
