@@ -267,13 +267,18 @@ public class Foo {
     	class="net.sourceforge.pmd.rules.XPathRule"
     	externalInfoUrl="http://pmd.sourceforge.net/rules/j2ee.html#DoNotCallSystemExit">
     	<description>Web applications should not call System.exit(), since only the web container or the
-application server should stop the JVM.
+application server should stop the JVM. This rule also checks for the equivalent call Runtime.getRuntime().exit().
 	</description>
     	<priority>3</priority>
     	<properties>
     		<property name="xpath">
     			<value><![CDATA[
-//Name[starts-with(@Image,'System.exit')]
+//Name[
+    starts-with(@Image,'System.exit')
+    or
+    (starts-with(@Image,'Runtime.getRuntime') and ../../PrimarySuffix[ends-with(@Image,'exit')])
+]
+
     		]]></value>
     		</property>
     	</properties>
@@ -281,8 +286,12 @@ application server should stop the JVM.
     		<![CDATA[
 public class Foo {
     public void bar() {
-        // NEVER DO THIS IN A APP SERVER !!!
+        // never call this when running in an application server !
         System.exit(0);
+    }
+
+    public void foo() {
+        Runtime.getRuntime().exit(0);   // never stop the JVM manually, the container will do this.
     }
 }
      ]]></example>
